src/assets/styles/style.css
.site-logo {
	width: 380px;
	height: auto;
	margin-top: 50px;
}

.mini-logo {
	display: flex;
	justify-content: center;
	align-items: center;
	margin: 50px 0px 26px 0px;
}


.searchbar{
	margin-bottom:10px;
	height:45px !important;
	box-shadow: none !important;
	border: 1px solid #bbb !important;
	width: 296px !important;
}

.product-breadcrumbs{
	width:100vw;
}

@media only screen and (max-width: 1279px) {
	.footer-center {
		text-align: center !important;
	}
	.footer-justify {
		justify-content: center;
	}

	.searchbar{
		width: 100% !important;
	}
}

@media only screen and (max-width: 576px) {
	.site-logo {
		max-width: 100%;
	}
}

.img-about {
	max-width: 100%;
	height: auto;
}

.img-grubster {
	width: 160px;
	height: 160px;
	border-radius: 50%;
	margin-bottom: 11px;
}

.grubster-subtitle {
	font-style: italic;
	margin: 0;
}

.grubster-weapon {
	margin: 0;
}

.pseudo_border {
	position: relative;
	display: inline-block;
}

.pseudo_border:after {
	content: '';
	position: absolute;
	left: 0;
	right: 0;
	top: 100%;
	margin: 10px auto;
	width: 70px;
	height: 4px;
	background: #448aff;
}

.pseudo_border1 {
	position: relative;
	display: inline-block;
}

.pseudo_border1:after {
	content: '';
	position: absolute;
	left: 0;
	right: 0;
	top: 100%;
	margin: 10px 0px;
	width: 70px;
	height: 4px;
	background: #448aff;
}

@media only screen and (max-width: 960px) {
	.about-text {
		text-align: center !important;
	}
	.pseudo_border1 {
		position: relative;
		display: inline-block;
	}
	.pseudo_border1:after {
		content: '';
		position: absolute;
		left: 0;
		right: 0;
		top: 100%;
		margin: 10px auto;
		width: 70px;
		height: 4px;
		background: #448aff;
	}
}

.footer {
	background: #448aff;
}

.pseudo_border2 {
	position: relative;
	display: inline-block;
	color: white;
}

.pseudo_border2:after {
	content: '';
	position: absolute;
	left: 0;
	right: 0;
	top: 100%;
	margin: 10px 0px;
	width: 70px;
	height: 4px;
	background: #fff;
}

.footer-col1 {
	padding: 0px 30px;
}

textarea.form-class,
input.form-class {
	width: 100%;
	padding: 10px;
	border: none;
	font-size: 13px;
}

textarea.form-class:focus,
input.form-class:focus {
	outline: none;
	border: none;
}

textarea.form-message {
	width: 100%;
	height: 120px;
	font-family: Arial, Helvetica, sans-serif;
}

input.form-button-class {
	padding: 15px 24px;
	border-radius: 25px;
	border: 2px solid white;
	font-size: 13px;
	background: none;
	color: white;
	letter-spacing: 2px;
}

input.form-button-class:focus {
	outline: none;
}

@media only screen and (max-width: 1170px) {
	.displayLinks {
		display: none;
	}
}

.about-textdisplay {
	width: 500px;
	margin: 0 auto;
}

div.MuiPaper-root.MuiMenu-paper.MuiPopover-paper.MuiPaper-elevation8.MuiPaper-rounded {
	margin-top: 50px;
}

ul.MuiList-root.MuiMenu-list.MuiList-padding {
	width: 260px;
}

a.makeStyles-navLink-18.active {
	color: #448aff;
}

.alice-carousel__stage-item {
	width: 20px;
}

.alice-carousel__stage-item img {
	width: 200px;
}

.img-border-cart {
	border: 1px solid #ccc;
}

.border-bottom-item-cart {
	border-bottom: 1px solid #ccc;
}


/* .border-bottom-item-cart:last-child{
    border-bottom: none;
} */



.checkout-btn {
	margin-top: 20px;
	padding: 16px;
	background-color: #448aff;
	border: none;
	display: flex;
	width: 100%;
	justify-content: center;
	font-size: 18px;
	color: white;
	cursor: pointer;
	transition: 0.3s;
}

.checkout-btn:hover {
	border: none;
}

.checkout-btn:hover,
.checkout-btn:focus {
	opacity: 0.7;
	outline: none;
	border: none;
}

.redeem-background {
	background-color: #448aff;
	padding: 4px 10px 0 10px;
	border-radius: 2px;
	color: white;
	font-weight: 600;
}



@media only screen and (min-width: 1279px) {
.checkout-border-cart {
    border: 1px solid #ccc;
    /* width: 380px;  */
    margin-top: 60px; 
    padding: 40px;
    padding-bottom: 30px;
}

  }

.sprd-basket__payment__icon {
	max-width: 10.5em;
	height: 1.375em;
	margin-left: 1em;
}

.sprd-basket__payment__sprd-lbc-m3 {
	margin-top: 30px;
	text-align: center;
}

.display-checkout-block {
	position: fixed;
	bottom: 0;
	background: red;
	margin: 0
}

.sprd-basket-item__info {
	flex: 1;
	margin-left: 10px;
	display: flex;
	flex-wrap: wrap;
}


/* .sprd-basket-item__info__col {
    margin-top: 1em;
} */

.sprd-basket-item__info__col:first-child {
	flex: 1 0 auto;
	max-width: 60%;
}

.sprd-basket-item__info__col:nth-child(2) {
	margin-left: auto;
	margin-bottom: 1em;
	padding-left: 1.5em;
}

.sprd-basket-item__info__col:nth-child(3) {
	width: 100%;
	display: flex;
	align-items: flex-end;
	justify-content: flex-end;
}

.delete-icon {
	fill:#448aff !important;
	font-size: 25px !important;
    /* margin-left: 40px; */
    float: right;
}

.sprd-quantity-control__button {
	border: none;
	cursor: pointer;

}

.sprd-quantity-control__button,
.sprd-quantity-control__input {
	border: 1px solid #ccc;
}

.sprd-quantity-control__input {
	width: 70px;
    border-left: 0px;
    border-right: 0px;
    text-align: center;
	line-height: 35px;
	font-size: 14px;
}
/* .sprd-quantity-control__button:hover,
.sprd-quantity-control__button:focus{
    border: 1px solid #ccc;
} */
.sprd-quantity-control__input:hover,
.sprd-quantity-control__input:focus {
	outline: none;
}

.sprd-quantity-control {
	display: inline-flex;
}




div.sticky {
    position: -webkit-sticky;
    position: sticky;
    bottom: 0;
    padding: 10px 0px;
    background: white;
    /* border-top: 1px solid rgba(0, 0, 0, 0.8); */
  }

  .cart-deleto-btn:hover{
	  background-color: transparent;
  }





.clearfix-categories::after {
	content: "";
	clear: both;
	display: table;
  }

  .dropdown-categories{
	padding-top: 15px;
	padding-bottom: 10px;
	border-bottom: 1px solid;
  }

  .dropdown-categories:first-child{
  	border-top: 1px solid;
  }

.nav-categories-ul{
	list-style-type: none;
	padding:0;
	margin: 0;
	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
	overflow-x: auto;
	max-height: 400px;
}
/* ... */

